# autoconf-gl-macros

./: Makefile.am  configure.ac
m4/: ax_check_gl.m4  ax_check_glu.m4  ax_check_glut.m4  ax_lang_compiler_ms.m4
