AC_INIT([Autoconf GL Macros],
        [20101226],
        [http://code.google.com/p/autoconf-gl-macros/issues/entry],
        [autoconf-gl-macros],
        [http://code.google.com/p/autoconf-gl-macros/])
AC_PREREQ([2.65])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_FILES([Makefile])
AX_CHECK_GLUT

AC_OUTPUT
